More css changes, fixed overflowing text

--- a/todolist-front/src/App.css
+++ b/todolist-front/src/App.css
@@ -36,3 +36,9 @@
     transform: rotate(360deg);
   }
 }
+
+.ellipsis {
+  overflow: hidden;
+  text-overflow: ellipsis;
+  white-space: nowrap;
+}
