--- a/todolist-front/src/components/AddTodo/AddTodo.css
+++ b/todolist-front/src/components/AddTodo/AddTodo.css
@@ -1,9 +1,12 @@
-
 .add-todo-button{
-  margin: 0 0 16px 16px;
+  margin-bottom: 16px;
 }
 
-.todo-form {
+.todo-form-outer{
+  display: flex;
+  justify-content: center;
+}
+.todo-form-inner {
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -11,7 +14,6 @@
     border: 1px solid #ddd;
     border-radius: 5px;
     width: 300px;
-    margin-inline-start: 16px;
   }
 
   .form-title {
